--- a/WebApiTesting/appsettings.json
+++ b/WebApiTesting/appsettings.json
@@ -11,5 +11,8 @@
   "JwtConfig": {
     "Secret": "jasdnaiosd90q3ruqsjcb8weyhfvbdsjvfw90f_SDAJDiwu3euend9201u904u4849328hcjncvjsdfsdjfnsdnfklas"
   },
+  "Authentication": {
+    "ApiKey": "AK-123-RAMADAN-123"
+  }
   "AllowedHosts": "*"
 }
